still fixing the gaps between overflowing elements

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ body {
 #page-container {
     display: flex;
     flex-direction: column;
-    min-height: 100%; /* Ensures minimum height for the flex container */
+    min-height: 100vh; /* Ensures minimum height for the flex container */
 }
 
 #content-wrap {
